[add-to-immutable-list] replace list.copyof with collections.unmodifiableList